--- a/Company.Web/Views/Department/Index.cshtml
+++ b/Company.Web/Views/Department/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@model IEnumerable<Department>
+﻿@model IEnumerable<DepartmentDto>
 @{
     ViewData["Title"] = "Index";
 }
-<div class="my-5">
+<h1>All Departments</h1>
+<br />
+<div class="my-1">
     <a class="btn btn-primary" asp-controller="Department" asp-action="Create">Create New Department</a>
 </div>
 <br />
@@ -33,21 +35,7 @@
                     <td>
                         @department.CreateAt
                     </td>
-                    <td>
-                        <a class="btn btn-outline-success" asp-action="Details" asp-route-id="@department.Id">
-                            Details
-                        </a>
-                    </td>
-                    <td>
-                        <a class="btn btn-outline-primary" asp-action="Update" asp-route-id="@department.Id">
-                            Update
-                        </a>
-                    </td>
-                    <td>
-                        <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@department.Id">
-                            Delete
-                        </a>
-                    </td>
+                    <partial name="_ActionButtonsPartialView" model="@department.Id"/>
                 </tr>
             }
         </tbody>
