--- a/Company.Web/Views/Employee/Index.cshtml
+++ b/Company.Web/Views/Employee/Index.cshtml
@@ -1,1 +1,80 @@
-﻿
+﻿@model IEnumerable<EmployeeDto>
+@{
+    ViewData["Title"] = "Index";
+}
+<h1>All Employees</h1>
+<br />
+<div class="my-1">
+    <a class="btn btn-primary" asp-controller="Employee" asp-action="Create">Create New Employee</a>
+</div>
+<br />
+<div class="row justify-content-center align-items-center my-3">
+    <form class="row col-8 offset-2" asp-action="Index">
+        <div class="col-8">
+            <input type="text" class="form-control" name="searchInp" placeholder="Search By Name" />
+        </div>
+        <div class="col-4">
+            <input type="submit"  value="Search" class="btn btn-secondary" />
+        </div>
+    </form>
+</div>
+
+@if (Model.Count() > 0)
+{
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>@Html.DisplayNameFor(E => E.ImageUrl)</th>
+                <th>@Html.DisplayNameFor(E => E.Name)</th>
+                <th>@Html.DisplayNameFor(E => E.Age)</th>
+                <th>@Html.DisplayNameFor(E => E.HireDate)</th>
+                <th>@Html.DisplayNameFor(E => E.Address)</th>
+                <th>@Html.DisplayNameFor(E => E.Email)</th>
+                <th>@Html.DisplayNameFor(E => E.PhoneNumber)</th>
+                <th>@Html.DisplayNameFor(E => E.Salary)</th>
+                <th>Details</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {
+                <tr>
+                    <td>
+                        <img src="~/Files/Images/@employee.ImageUrl" height="40" width="40" />
+                    </td>
+                    <td>
+                        @employee.Name
+                    </td>
+                    <td>
+                        @employee.Age
+                    </td>
+                    <td>
+                        @employee.HireDate
+                    </td>
+                    <td>
+                        @employee.Address
+                    </td>
+                    <td>
+                        @employee.Email
+                    </td>
+                    <td>
+                        @employee.PhoneNumber
+                    </td>
+                    <td>
+                        @employee.Salary
+                    </td>
+                    <partial name="_ActionButtonsPartialView" model="@employee.Id" />
+
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <div class="alert alert-danger" role="alert">
+        There Are No Employees !!!!
+    </div>
+}
