--- a/Company.Web/Views/_ViewImports.cshtml
+++ b/Company.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Company.Web
 @using Company.Data.Models
 @using Company.Web.Models
+@using Company.Service.Services.Department.Dto
+@using Company.Service.Services.Employee.Dto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
