--- a/Company.Web/Views/Department/Index.cshtml
+++ b/Company.Web/Views/Department/Index.cshtml
@@ -35,7 +35,7 @@
                     <td>
                         @department.CreateAt
                     </td>
-                    <partial name="_ActionButtonsPartialView" model="@department.Id"/>
+                    <partial name="_ActionButtonsPartialView" model="@department.Id.ToString()"/>
                 </tr>
             }
         </tbody>
