--- a/Company.Web/Views/Employee/Index.cshtml
+++ b/Company.Web/Views/Employee/Index.cshtml
@@ -65,7 +65,7 @@
                     <td>
                         @employee.Salary
                     </td>
-                    <partial name="_ActionButtonsPartialView" model="@employee.Id" />
+                    <partial name="_ActionButtonsPartialView" model="@employee.Id.ToString()" />
 
                 </tr>
             }
