--- a/Company.Web/Views/_ViewImports.cshtml
+++ b/Company.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using Company.Web.Models
 @using Company.Service.Services.Department.Dto
 @using Company.Service.Services.Employee.Dto
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
